[gd_scene load_steps=9 format=2]

[ext_resource path="res://hsz/scene/main_menu/background.png" type="Texture" id=1]
[ext_resource path="res://hsz/scene/main_menu/start.png" type="Texture" id=2]
[ext_resource path="res://hsz/scene/main_menu/options.png" type="Texture" id=3]
[ext_resource path="res://hsz/scene/main_menu/exit.png" type="Texture" id=4]
[ext_resource path="res://hsz/audio/sfx/select.mp3" type="AudioStream" id=5]
[ext_resource path="res://hsz/scene/main_menu/main_menu.gd" type="Script" id=6]
[ext_resource path="res://hsz/audio/sfx/press.mp3" type="AudioStream" id=7]
[ext_resource path="res://hsz/utils/normal_button.gd" type="Script" id=8]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 6 )

[node name="InterfaceLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="InterfaceLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="TextureRect" parent="InterfaceLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="InterfaceLayer/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -107.0
margin_top = -192.0
margin_right = 108.0
margin_bottom = 11.0
size_flags_horizontal = 4
alignment = 1

[node name="StartButton" type="Button" parent="InterfaceLayer/Control/VBoxContainer"]
margin_left = 7.0
margin_right = 208.0
margin_bottom = 47.0
size_flags_horizontal = 4
size_flags_vertical = 2
icon = ExtResource( 2 )
flat = true
icon_align = 1
script = ExtResource( 8 )

[node name="OptionsButton" type="Button" parent="InterfaceLayer/Control/VBoxContainer"]
margin_top = 69.0
margin_right = 214.0
margin_bottom = 118.0
size_flags_horizontal = 4
size_flags_vertical = 2
icon = ExtResource( 3 )
flat = true
icon_align = 1
script = ExtResource( 8 )

[node name="ExitButton" type="Button" parent="InterfaceLayer/Control/VBoxContainer"]
margin_left = 2.0
margin_top = 138.0
margin_right = 212.0
margin_bottom = 187.0
size_flags_horizontal = 4
size_flags_vertical = 2
icon = ExtResource( 4 )
flat = true
icon_align = 1
script = ExtResource( 8 )

[node name="Sound" type="Node" parent="."]

[node name="Select" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 5 )

[node name="Press" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 7 )

[connection signal="hover" from="InterfaceLayer/Control/VBoxContainer/StartButton" to="." method="_on_StartButton_hover"]
[connection signal="press" from="InterfaceLayer/Control/VBoxContainer/StartButton" to="." method="_on_StartButton_press"]
[connection signal="hover" from="InterfaceLayer/Control/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_hover"]
[connection signal="press" from="InterfaceLayer/Control/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_press"]
[connection signal="hover" from="InterfaceLayer/Control/VBoxContainer/ExitButton" to="." method="_on_ExitButton_hover"]
[connection signal="press" from="InterfaceLayer/Control/VBoxContainer/ExitButton" to="." method="_on_ExitButton_press"]
